Coverity analysis defect 115592: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/modules/enterprise/src/fle/query_analysis/aggregate_expression_intender.cpp:1075: UNINIT_CTOR 115592 Class member declaration for "numChildrenVisited".
      /src/mongo/db/modules/enterprise/src/fle/query_analysis/aggregate_expression_intender.cpp:904: UNINIT_CTOR 115592 Non-static class member "numChildrenVisited" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Sam Mercier
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: