SERVER-50809 Initialize scalar field in IntentionInVisitor

GitOrigin-RevId: 677faf36990d240b7d50357329d0d570b628bce2